# libintl-lite

./: CMakeLists.txt  LICENSE  README.md
include/: libintl.h
src/: CMakeLists.txt  grammar.txt  libintl.cpp
test/: CMakeLists.txt  main.cpp
test/data/cs/LC_MESSAGE/: make-pot.sh  messages.mo  messages.po  messages.pot
